test/sema/assignment-result.delta.output
assignment-result.delta:6:7: error: cannot assign 'void' to 'int'
    a = (a = 2);
      ^
