test/sema/assignment-result.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var a = 1;
    // CHECK: [[@LINE+1]]:7: error: cannot assign 'void' to 'int'
    a = (a = 2);
}
